assets/css/style.css
/* CSS STYLES */

/* COLOR VARIABLES */
:root {
    --black: #131516;
    --neonblue: #12d0f1; 
}

/* HEADER STYLE */
header {
    display:flex;
    padding: 22px;
    background: var(--black); 
    justify-content: space-between;  
}
/* HEADER H1 STLYE */
header h1 {
    background: var(--neonblue);
    padding: 20px;
    font-size: 2.2rem;
}

/* NAVIGATION STLYE */
nav {
    display: flex;
    justify-content: flex-end;
    align-items:flex-end;
}

/* NAVIGATION LINK STYLE */
nav a {
    display:flex;
    color: var(--neonblue);
    margin-right: 14px;
}
/* NAVIGATION LIST ITEM STYLE */
nav li {
display:inline-block;
font-size: 2em;

}

/* SIDEBAR STYLE */
aside {
    display:flex;
    flex-direction: column;
    background: var(--black);
    color: var(--neonblue);
    font-size: 2em;
    
    position:absolute;
    height: 166%;
    width: 300px;
    border-right-style:solid;
    border-width:5px;
    border-right-color: var(--neonblue);
}

/* SIDEBAR LIST STYLES */
aside ul {
    margin:20px;
    text-align:right;
    line-height: 5;
 }

/* SECTION STLYES */
section {
    background: var(--black);
    color: var(--neonblue);
    margin-left:300px;
}

/* ABOUTME STYLE */
#aboutMe {
    display:flex;
}

/* PARAGRAPH STYLES */
p {
    padding: 35px;
    font-size:22px;
    display:flex;
    justify-content: flex-start;
    align-items: center;
}

/* WORK SECTION STYLES */
#work {
    display:flex;
    
   
    margin-left: 300px;
    background-color: var(--black);
    color: var(--neonblue);
    height: 400px;
    border:5px;
    border-top-style: solid;
    border-bottom-style: solid;
    border-color: var(--neonblue);
       display: flex;
    flex-direction: row;
}

/* MAIN PROJECT 1 STYLE  */
.projects {

    display:flex;
    border:3px;
    border-style: solid;
    padding: 25px;
    justify-content: flex-end;
 }

/* PROJECT1 TITLE OVERLAY */
#info1 {
 
    position:absolute;
    background: rgba(0, 0, 0, 0.8);
    display: flex;
    margin:-80px 12px;
    color: var(--neonblue);
}

.hide {
    display: none;
}

/* PROJECT 2 TITLE OVERLAY */
#info2 {
 
    position:absolute;
    background: rgba(0, 0, 0, 0.8);
    display: flex;
    margin:-60px 35px;
    color: var(--neonblue);
}
/* PROJECT 2 MAIN STYLE */
.projects2 {
    display:flex;
    
    padding: 55px;
    margin-top: -400px;
    margin-left: 430px;
    background-color: var(--black);
    color: var(--neonblue);
     height: 400px;
    border:5px;
    border-top-style: solid;
    border-bottom-style: solid;
    border-color: var(--neonblue);
    width:100%;
    display: flex;
    flex-direction: row;
}
/* PROJECT 3 OVERLAY */
#info3 {
 
    position:absolute;
    background: rgba(0, 0, 0, 0.7);
    display: flex;
    margin:-90px 18px;
    color: var(--neonblue);
        

}
/* PROJECT 3 MAIN STYLE */
.projects3 {
    display:flex;
    
    padding: 55px;
    margin-top: -800px;
    margin-left: 830px;
    background-color: var(--black);
    color: var(--neonblue);
    width:auto;
    height: 400px;
    border:5px;
    border-top-style: solid;
    border-bottom-style: solid;
    border-color: var(--neonblue);
    width:100%;

}
/* FOOTER STYLE */
footer h1{
    background-color: var(--black);
    color: var(--neonblue);
}
/* CONTACT INFO LINK STYLES */
#contactInfo a{
    color: var(--neonblue);
    font-size: 20px;
}
/* CONTACT INFO LIST STYLES */
#contactInfo ul{
    display: flex;
    justify-content: center;
    justify-content: space-around;
    

}

